@@ -1,4 +1,10 @@
-﻿shmuel 27.11.2014 23:44:56 +0200 - build 453
+﻿shmuel 28.11.2014 20:27:54 +0200 - build 454
+
+1. Продолжение 452: добавлена поддержка загрузки старого формата файла клавиатурного макроса.
+   * Сохранение будет производится в новом формате.
+   * Через полгода поддержку старого формата следует убрать.
+
+shmuel 27.11.2014 23:44:56 +0200 - build 453
 
 1. Уточнение 452.
 
